--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     }
   },
   "dependencies": {
+    "apexcharts": "^3.8.3",
     "axios": "^0.19.0",
     "vue": "^2.6.10",
+    "vue-apexcharts": "^1.4.0",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
