--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "raccoon-weather-extension",
-  "description": "A Vue.js web extension",
+  "name": "raccoon-weather",
+  "description": "Raccoon's 1st vue.js web extension",
   "version": null,
   "manifest_version": 2,
   "icons": {
@@ -8,12 +8,11 @@
     "128": "icons/icon_128.png"
   },
   "browser_action": {
-    "default_title": "raccoon-weather-extension",
+    "default_title": "raccoon-weather",
     "default_popup": "popup/popup.html"
   },
   "background": {
-    "scripts": [
-      "background.js"
-    ]
-  }
+    "scripts": ["background.js"]
+  },
+  "permissions": ["cookies", "http://*/*"]
 }
