--- a/src/manifest.json
+++ b/src/manifest.json
@@ -14,5 +14,5 @@
   "background": {
     "scripts": ["background.js"]
   },
-  "permissions": ["cookies", "http://*/*"]
+  "permissions": ["cookies", "http://127.0.0.1/", "http://localhost/", "http://52.192.38.17/"]
 }
