--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "build": "react-scripts build"
   },
   "devDependencies": {
-    "node-sass": "^4.14.1"
+    "node-sass": "^4.14.1",
+    "resize-observer-polyfill": "^1.5.1"
   },
   "eslintConfig": {
     "extends": "react-app"
