--- a/package.json
+++ b/package.json
@@ -14,8 +14,12 @@
     "build": "react-scripts build"
   },
   "devDependencies": {
+    "@types/node": "^14.11.1",
+    "@types/react": "^16.9.49",
+    "@types/react-dom": "^16.9.8",
     "node-sass": "^4.14.1",
-    "resize-observer-polyfill": "^1.5.1"
+    "resize-observer-polyfill": "^1.5.1",
+    "typescript": "^4.0.3"
   },
   "eslintConfig": {
     "extends": "react-app"
