add mobx & stores

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,10 +2,7 @@
   "compilerOptions": {
     "target": "es5",
     "module": "esnext",
-    "lib": [
-      "dom",
-      "esnext"
-    ],
+    "lib": ["dom", "esnext"],
     "allowJs": true,
     "jsx": "react",
     "rootDir": "./src",
@@ -18,12 +15,9 @@
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "resolveJsonModule": true,
-    "noEmit": true
+    "noEmit": true,
+    "experimentalDecorators": true
   },
-  "exclude": [
-    "./node_modules"
-  ],
-  "include": [
-    "src"
-  ]
+  "exclude": ["./node_modules"],
+  "include": ["src"]
 }
