--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.20.0",
     "d3": "^5.16.0",
+    "mobx": "^5.15.6",
+    "mobx-react": "^6.3.0",
     "react": "^16.13.1",
     "react-app-polyfill": "^1.0.6",
     "react-dom": "^16.13.1",
@@ -14,6 +17,7 @@
     "build": "react-scripts build"
   },
   "devDependencies": {
+    "@types/d3": "^5.7.2",
     "@types/node": "^14.11.1",
     "@types/react": "^16.9.49",
     "@types/react-dom": "^16.9.8",
