--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "d3": "^5.16.0",
     "mobx": "^5.15.6",
     "mobx-react": "^6.3.0",
+    "public-ip": "^4.0.2",
     "react": "^16.13.1",
     "react-app-polyfill": "^1.0.6",
     "react-dom": "^16.13.1",
