--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,4 +15,17 @@ jobs:
         run: npm install
 
       - name: Build
+        env:
+          REACT_APP_GLOBAL_TEMPERATURE_URL: ${{secrets.REACT_APP_GLOBAL_TEMPERATURE_URL}}
+          REACT_APP_WEATHER_SERVER_URL: ${{secrets.REACT_APP_WEATHER_SERVER_URL}}
         run: npm run build
+
+      - name: Deploy
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_KEY }}
+        run: |
+          aws s3 cp \
+            --recursive \
+            --region ap-northeast-2 \
+            build s3://raccoon-weather-client
