--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "dependencies": {
     "axios": "^0.20.0",
     "d3": "^5.16.0",
-    "mobx": "^5.15.6",
+    "mobx": "4.15.7",
     "mobx-react": "^6.3.0",
     "public-ip": "^4.0.2",
     "react": "^16.13.1",
