--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,16 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_KEY }}
         run: |
-          aws s3 sync ./build s3://raccoon-weather-client
+          aws s3 sync --delete ./build s3://raccoon-weather-client \
+          --acl public-read \
+          --cache-control max-age=86400000,public && \
+          aws s3 cp s3://raccoon-weather-client s3://raccoon-weather-client \
+          --recursive \
+          --include "*.html" \
+          --metadata-directive REPLACE \
+          --acl public-read \
+          --cache-control max-age=0,must-revalidate,public \
+          --content-type "text/html; charset=utf-8"
 
       - name: Invalidate CloudFront Cache
         env:
