--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,7 @@ jobs:
           REACT_APP_WEATHER_SERVER_URL: ${{secrets.REACT_APP_WEATHER_SERVER_URL}}
         run: npm run build
 
-      - name: Deploy
+      - name: S3 Deploy
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_KEY }}
@@ -30,14 +30,14 @@ jobs:
           --cache-control max-age=86400000,public && \
           aws s3 cp s3://raccoon-weather-client s3://raccoon-weather-client \
           --recursive \
-          --include \"*.html\" \
+          --include "*.html" \
           --metadata-directive REPLACE \
           --acl public-read \
           --cache-control max-age=0,must-revalidate,public \
-          --content-type \"text/html; charset=utf-8\"
+          --content-type "text/html; charset=utf-8"
 
       - name: Invalidate CloudFront Cache
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_KEY }}
-        run: aws cloudfront create-invalidation --distribution-id ${{ secrets.CDN_DISTRIBUTION_ID }} --paths \"/*\"
+        run: aws cloudfront create-invalidation --distribution-id ${{ secrets.CDN_DISTRIBUTION_ID }} --paths "/*"
