--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "format": "prettier --write src"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.6.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
     "react-router-dom": "5.3.0",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.3",
@@ -26,6 +28,7 @@
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.3.2",
     "@types/styled-components": "^5.1.17",
+    "@types/webpack-env": "^1.16.3",
     "@typescript-eslint/eslint-plugin": "4.33.0",
     "@typescript-eslint/parser": "4.33.0",
     "eslint": "7.32.0",
