--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.6.2",
+    "axios": "^0.24.0",
     "d3-geo": "^3.0.1",
     "dayjs": "^1.10.7",
     "react": "^17.0.2",
