--- a/.eslintrc
+++ b/.eslintrc
@@ -13,6 +13,7 @@
     "prettier"
   ],
   "extends": [
+    "react-app/jest",
     "plugin:react/recommended",
     "plugin:@typescript-eslint/recommended",
     "plugin:prettier/recommended"
