--- a/package.json
+++ b/package.json
@@ -51,5 +51,10 @@
     "eslint-plugin-react-hooks": "4.3.0",
     "prettier": "2.4.1",
     "typescript": "^4.5.2"
+  },
+  "jest": {
+    "transformIgnorePatterns": [
+      "/!node_modules/"
+    ]
   }
 }
